--- a/oop-tdd-advanced/composer.json
+++ b/oop-tdd-advanced/composer.json
@@ -7,5 +7,13 @@
             "Framework\\": "src/",
             "App\\": "app/"
         }
+    },
+    "require-dev": {
+        "phpunit/phpunit": ">=7"
+    },
+    "autoload-dev": {
+        "psr-4": {
+            "Tests\\": "tests"
+        }
     }
 }
