--- a/oop-tdd-advanced/composer.json
+++ b/oop-tdd-advanced/composer.json
@@ -1,6 +1,7 @@
 {
     "require": {
-        "symfony/var-dumper": "^6.4"
+        "symfony/var-dumper": "^6.4",
+        "ext-mysqli": "*"
     },
     "autoload": {
         "psr-4": {
